update coach and add new tests