@@ -2,40 +2,22 @@ package com.example.coach4you.core.domain.coach;
 
 import com.example.coach4you.core.domain.coach.enums.SportType;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
 
+@Getter
+@AllArgsConstructor
 public class SportSpecialization {
 
   private Long id;
   private SportType sportType;
   private String description;
 
-  public SportSpecialization(Long id,
-      SportType sportType, String description) {
-    this.id = id;
-    this.sportType = sportType;
-    this.description = description;
-  }
-
   public SportSpecialization(Long id) {
     this.id = id;
   }
 
   public static List<SportSpecialization> of(List<Long> sportIds) {
-    return sportIds.stream()
-        .map(SportSpecialization::new)
-        .collect(Collectors.toList());
-  }
-
-  public Long getId() {
-    return id;
-  }
-
-  public SportType getSportType() {
-    return sportType;
-  }
-
-  public String getDescription() {
-    return description;
+    return sportIds.stream().map(SportSpecialization::new).toList();
   }
 }
